Changelog
=========

3.2.1 - Unreleased
------------------

* use ckeditor 3.2.1

* plone 4 compliance :

  - remove iw.resourcetraverser dependency

  - remove wysiwyg_support in skin (no more useful)

* control panel improvements

* functional doctests added or improved

* FAQ added

* buildout examples added to help developers using svn product

* javascript contextuel config is now packed

* added local field widget settings overload

3.0.2 - Unreleased
------------------

* use ckeditor 3.0.2


3.0 - Unreleased
----------------

* Initial release
