@@ -24,6 +24,10 @@ Changelog
 
 * added local field widget settings overload
 
+* changed portal_transforms resolveuid
+
+* all basehref problems fixed
+
 3.0.2 - Unreleased
 ------------------
 
